// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inline-style-parser correctly parses multiple declarations 1`] = `
[
  {
    "position": Position {
      "end": {
        "column": 90,
        "line": 2,
      },
      "source": undefined,
      "start": {
        "column": 7,
        "line": 2,
      },
    },
    "property": "background",
    "type": "declaration",
    "value": "-webkit-gradient(linear, left top, left bottom, from(white), to(black))",
  },
  {
    "position": Position {
      "end": {
        "column": 24,
        "line": 3,
      },
      "source": undefined,
      "start": {
        "column": 7,
        "line": 3,
      },
    },
    "property": "content",
    "type": "declaration",
    "value": "" "",
  },
  {
    "comment": " comment ",
    "position": Position {
      "end": {
        "column": 39,
        "line": 3,
      },
      "source": undefined,
      "start": {
        "column": 26,
        "line": 3,
      },
    },
    "type": "comment",
  },
  {
    "position": Position {
      "end": {
        "column": 14,
        "line": 4,
      },
      "source": undefined,
      "start": {
        "column": 7,
        "line": 4,
      },
    },
    "property": "foo",
    "type": "declaration",
    "value": "bar",
  },
  {
    "position": Position {
      "end": {
        "column": 5,
        "line": 5,
      },
      "source": undefined,
      "start": {
        "column": 15,
        "line": 4,
      },
    },
    "property": "-o-transition",
    "type": "declaration",
    "value": "all .5s",
  },
]
`;

exports[`inline-style-parser correctly parses single declaration 1`] = `
[
  {
    "position": Position {
      "end": {
        "column": 26,
        "line": 1,
      },
      "source": undefined,
      "start": {
        "column": 1,
        "line": 1,
      },
    },
    "property": "background-color",
    "type": "declaration",
    "value": "#C0FFEE",
  },
]
`;

exports[`inline-style-parser correctly parses when comment precedes colon 1`] = `
[
  {
    "position": Position {
      "end": {
        "column": 40,
        "line": 1,
      },
      "source": undefined,
      "start": {
        "column": 1,
        "line": 1,
      },
    },
    "property": "text-align",
    "type": "declaration",
    "value": "center",
  },
]
`;
